# libxkbregistry

./: .editorconfig  README.md  meson.build  meson_options.txt
doc/: Doxyfile.in
examples/: list-all.c
src/: xkbregistry-private.h  xkbregistry.c  xkbregistry.h
test/: test-registry.c
